Added simple and compound interest calculator
Created the HTML structure and CSS styling for the interest calculator page. Implemented JavaScript functionality to calculate both simple and compound interest based on user input for interest rate and time (in months). The calculator provides results dynamically for both interest types.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="projetoA-container"></div>
-
-    <script>
+    
+    <!-- <script>
         // Função para carregar o conteúdo do index.html do projeto A
         fetch('projects/relogio-digital/index.html')
             .then(response => response.text())
@@ -17,6 +16,6 @@
                 document.getElementById('projetoA-container').innerHTML = data;
             })
             .catch(error => console.error('Erro ao carregar o projeto A:', error));
-    </script>
+    </script> -->
 </body>
 </html>
