fixed relogio digial js import

--- a/projects/relogio-digital/index.html
+++ b/projects/relogio-digital/index.html
@@ -47,7 +47,7 @@
   <footer>
     <h3>Desenvolvido por <strong>Guilherme Pereira Campos</strong></h3>
   </footer>
-  <script src="relogio-digital.js"></script>
+  <script src="relogioDigital.js"></script>
 </body>
 
 
