feat: Add removeComma function to filter input values
- Implemented removeComma function to remove commas and periods from input
- Simplified event listener to call removeComma directly

--- a/projects/calculadora-juros/index.html
+++ b/projects/calculadora-juros/index.html
@@ -18,17 +18,17 @@
       <div id="input_box">
         <div class="input-field">
           <label for="initial-value">Valor Inicial (capital)</label>
-          <input type="number" id="initial-value">
+          <input type="number" id="initial-value" placeholder="0,00" >
         </div>
 
         <div class="input-field">
           <label for="fee">Taxa de Juros a.m</label>
-          <input type="number" id="fee">
+          <input type="number" id="fee" placeholder="0">
         </div>
 
         <div class="input-field">
           <label for="time">Tempo de Rendimento a.m</label>
-          <input type="number" id="time">
+          <input type="number" id="time" placeholder="0">
         </div>
       </div>
 
