Add gender type

--- a/projects/calculadora-imc/index.html
+++ b/projects/calculadora-imc/index.html
@@ -22,6 +22,9 @@
     <section id="calculator">
       <form id="main-form">
         <h2 id="calculator-title">Calculadora - IMG</h2>
+
+
+
         <div class="input-box">
           <label for="weight">Peso em Kg</label>
           <div class="input-field">
@@ -38,6 +41,24 @@
             <input type="number" step="any" id="height" placeholder="1,84" required>
             <span>m</span>
           </div>
+        </div>
+<!-- 
+        <div id="container-age-type" class="user-type">
+          <label>
+            <input type="radio" name="age-type" value="0" checked><span>Adulto</span>
+          </label>
+          <label>
+            <input type="radio" name="age-type" value="1"><span>Criança</span>
+          </label>
+        </div> -->
+
+        <div id="container-gender-type" class="user-type">
+          <label>
+            <input type="radio" name="gender-type" value="0" checked><span>Masculino</span>
+          </label>
+          <label>
+            <input type="radio" name="gender-type" value="1"><span>Feminino</span>
+          </label>
         </div>
 
         <button id="btn-calculate">
